Add assignment submission page link

--- a/sagemath-activity-sheet-1.ipynb
+++ b/sagemath-activity-sheet-1.ipynb
@@ -371,8 +371,19 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cf063e2b",
+   "metadata": {},
+   "source": [
+    "## Link to the assignment submission page\n",
+    "\n",
+    "https://csusb.instructure.com/courses/24717/assignments/360205"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d054a39d",
    "metadata": {},
    "source": []
   }
